[package]
name = "indexsort"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/al8n/indexsort"
license = "MIT/Apache-2.0"
description = "Yet another sort crate, porting Golang sort package to Rust."
keywords = ["sort", "sorting", "go sort", "golang sort"]
categories = ["algorithms", "data-structures", "no-std"]

[features]
default = ["alloc"]
alloc = []

[dependencies]


[dev-dependencies]
criterion = "0.4"
rand = "0.8"